<resources>
    <string name="app_name">Vote 2024</string>
    <string name="secure_and_decentralized">Secure and decentralized</string>
    <string name="let_s_start">Let`s Start</string>
    <string name="slid_header_1">Freedom Tool</string>
    <string name="slide_description_1">Fully Privacy-protected\ndecentralized voting system</string>
    <string name="slide_header_2">Step 1</string>
    <string name="slide_description_2">During verification, your passport is scanned, but all personal data remains only on your device and no one has access to it.</string>
    <string name="slider_footer_2">Making you non-traceable!</string>
    <string name="slider_header_4">Step 3</string>
    <string name="slider_description_4">Register for the active poll and cast your vote; it\'s securely recorded on the blockchain, making it tamper-proof and non-traceable.</string>
    <string name="slide_footer_4">Ensuring your voice is heard!</string>
    <string name="slider_header_3">Step 2</string>
    <string name="slider_description_3">System creates a special \'voting pass\' for you, ensuring your identity remains private and preventing multiple votes.</string>
    <string name="slider_footer_3">Making you unique and anonymous!</string>
    <string name="participate">Participate</string>
    <string name="participate_description">Fully privacy protected\n decentralized voting system</string>
    <string name="title_activity_scan">ScanActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="scan_your_passport">Scan your passport</string>
    <string name="scan_passport_description">Data is stored only on a device</string>
    <string name="passport_camera_tip">Move your PASSPORT card inside\nthe border</string>
    <string name="nfc_scan_tip">Move your passport inside the border</string>
    <string name="permission_title">Permission Required</string>
    <string name="permission_description">We need your permission to access camera in order to scan Passport.</string>
    <string name="button_ok">OK</string>
    <string name="nfc_scan_title">NFC Scanning</string>
    <string name="nfc_scan_description">Reading data</string>
    <string name="confirm_your_data">Confirm your data</string>
    <string name="confitm_data_description">Anonymized proof will be created</string>
    <string name="confirm">Confirm</string>
    <string name="polls">Polls</string>
    <string name="please_wait">Please wait…</string>
    <string name="comfirm_proof_description">Creating anonymized\nidentity proof</string>
    <string name="generating_proof_tip">"<b>"Remember:"</b>" Your data is only stored on this device and \nnever reviled or shared with any third party</string>
    <string name="all_done">All Done!</string>
    <string name="all_done_description">You will be redirected\nin 5 sec</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="pool_1">The election of a new CEO to the company begins</string>
    <plurals name="endx_in_x_hours">
        <item quantity="one">Ends in %1$s hour</item>
        <item quantity="other">Ends in %1$s hours</item>
    </plurals>

    <!-- Plural for "starts in X hours" -->
    <plurals name="starts_in_x_hours">
        <item quantity="one">Starts in %1$s hour</item>
        <item quantity="other">Starts in %1$s hours</item>
    </plurals>

    <!-- Plural for "ends in X days" -->
    <plurals name="ends_in_x_days">
        <item quantity="one">Ends in %1$s day</item>
        <item quantity="other">Ends in %1$s days</item>
    </plurals>

    <!-- Plural for "begins in X days" -->
    <plurals name="begins_in_x_days">
        <item quantity="one">Begins in %1$s day</item>
        <item quantity="other">Begins in %1$s days</item>
    </plurals>

    <!-- Plural for "ends in X days Y hours" -->
    <plurals name="ends_in_x_days_y_hours">
        <item quantity="one">Ends in %1$s day and %2$s hour</item>
        <item quantity="other">Ends in %1$s days and %2$s hours</item>
    </plurals>

    <!-- Plural for "begins in X days Y hours" -->
    <plurals name="begins_in_x_days_y_hours">
        <item quantity="one">Begins in %1$s day and %2$s hour</item>
        <item quantity="other">Begins in %1$s days and %2$s hours</item>
    </plurals>
    <string name="pool_1_header">Сhoosing a new CEO</string>
    <string name="non_traceable_identity">Secure identification</string>
    <string name="anonymized_voting">Anonymized choice</string>
    <string name="decentralized_vote_casting">Immutable results</string>
    <string name="audited_open_source_codebase">Audited, open-source codebase</string>
    <string name="document_class_mode">Document class mode</string>
    <string name="issuing_state_code">Issuing state code</string>
    <string name="document_number">Document number</string>
    <string name="date_of_expiry">Date of expiry</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="personal_number">Personal number</string>
    <string name="surname">Surname</string>
    <string name="given_name">Given name</string>
    <string name="nationality">Nationality</string>
    <string name="steps">Step %1$s/3</string>
    <string name="error_while_reading">NFC not scanned, please try again</string>
    <string name="voting_criteria">Criteria</string>
    <string name="you_can_t_vote">Verification needed</string>
    <string name="you_can_vote">You can vote</string>
    <string name="your_status">Your status:</string>
    <string name="are_x_years_old_on_or_before_election_day">Are %1$s years old</string>
    <string name="is_citizen">Are a %1$s citizen</string>
    <string name="no_votes">No polls available</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_are_already_authorized">You are already scanned your passport</string>
    <string name="pool_2_header">Popularity of sports</string>
    <string name="pool_2">Do you play sports?</string>
    <string name="no_passport_message">You have to scan passport to vote this pool</string>
    <string name="participate_btn">Participate</string>

    <string name="request_scan_header">Create your own identity</string>
    <string name="request_scan_descrition">To vote in this poll you must create your own identity</string>
    <string name="didnt_voted">You haven\'t voted yet</string>
    <string name="always_available">Always available</string>
    <string name="yes">1. Yes</string>
    <string name="no">2. No</string>
    <string name="periodically">3. Periodically</string>
    <string name="vote">Vote</string>
    <string name="done">Done</string>
    <string name="submited_vote_header">Your vote has\nbeen submitted</string>
    <string name="submited_vote_description">Please wait for the end of the voting</string>
    <string name="enrolled">Enrolled</string>
    <string name="button_no">No</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="formation_of_the_ballot">Formation of the signature</string>
    <string name="loading">Loading…</string>
    <string name="vote_anonymization">Anonymization</string>
    <string name="loading_text">Loading…</string>
    <string name="sending_your_vote">Sending your vote</string>
    <string name="finalizing">Finalizing</string>
    <string name="processing_hint">Remember: Neither your identity can be traced nor your vote matched to it</string>
    <string name="your_vote_is_non_traceable">This may take 5\-10 minutes</string>
    <string name="button_yes">Yes</string>
    <string name="turms_of_use">Terms of Use</string>

    <string name="localization_name">ENG</string>
    <string name="expiry_date_error">Passport has expired</string>
    <string name="not_able_to_generate_proof">Can\'t generate proof</string>
    <string name="authorize">Verify</string>
    <string name="delete_all_data_header">Delete All Data</string>
    <string name="delete_all_data_message">Are you sure you want to delete all data? This action cannot be undone.</string>
    <string name="decline">Decline</string>
    <string name="sign">Sign</string>
    <string name="name1">Sam Anderson</string>
    <string name="name2">Alexander Schmidt</string>
    <string name="name3">Olga Drake</string>
    <plurals name="_x_people_already_signed">
        <item quantity="one">%1$d person already signed</item>
        <item quantity="two">%1$d people already signed</item>
        <item quantity="few">%1$d people already signed</item>
        <item quantity="many">%1$d people already signed</item>
        <item quantity="other">%1$d people already signed</item>
    </plurals>
    <string name="view_petition">View Petition</string>
    <string name="you_and_x_other_people_already_signed">You and %1$s other people already signed</string>
    <string name="you_already_registered">You\'ve already signed it</string>
    <string name="cant_verify_multiple_device">You cannot be verified on multiple devices</string>
    <string name="check_back_later">Check back later</string>
    <string name="completed_vote">Completed</string>
    <string name="heading">HEADING</string>
    <string name="description">DESCRIPTION</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="passcode_description">Don\'t forget the code, or you\nwon\'t be able to restore it</string>
    <string name="too_many_attempts">Too many attempts, try again later</string>
    <string name="enter">Enter</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="enable">Enable</string>
    <string name="enable_nfingerprint">Enable\nFingerprint</string>
    <string name="set_up_a_passcode">Set up a\nPasscode</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="logout">Logout</string>
    <string name="biometric_prompt_title">Scan your fingerprint</string>
    <string name="biometric_prompt_description">Please place your finger on the fingerprint scanner to authenticate\n</string>
    <string name="repeat_passcode">Repeat Passcode</string>
    <string name="next_voter">Next voter</string>
    <string name="next_voter_title">You can use this device to\nenable others to vote</string>
    <string name="next_voter_description">This device automatically deletes previous voter data\nand scans new passports for voting</string>
    <string name="cancel">Cancel</string>
    <string name="pin_code_dont_match">Pin code don\'t match</string>
    <string name="please_try_again">Please try again</string>
    <string name="no_completed_votes">No completed votes</string>

</resources>